@startuml tile_package
title COO Project - tile package

package tile {
    class Tile {
        - Edge[] edges
        - Orientation orientation

        + Tile(Edge topEdge, Edge rightEdge, Edge bottomEdge, Edge leftEdge)
        + Tile(Edge topEdge, Edge rightEdge, Edge bottomEdge, Edge leftEdge, Orientation orientation)
        + Orientation getOrientation()
        + Edge getEdge(Direction direction)
        + boolean isCompatibleWith(Tile other, Direction direction)
        + Zone getZoneAt(Direction direction, int i)
        + String toString()
    }

    class TileBuilder {
        + TileBuilder()
        + Tile build(String string) throws WrongTileSyntaxException
    }

    enum Direction {
        TOP
        RIGHT
        BOTTOM
        LEFT

        + Direction getOldDirection(Orientation orientation)
        + Direction getNewDirection(Orientation orientation)
        + Direction toOpposite()
        + Direction toLeft()
        + Direction toRight()
    }

    enum Orientation {
        NORTH
        EAST
        SOUTH
        WEST
    }

    exception WrongTileSyntaxException {
        + WrongTileSyntaxException(String message)
    }

    Tile "1" *-- "4" Edge : contains
    Tile --> Direction : uses
    Tile --> Orientation : has
    TileBuilder ..> Tile : creates
    TileBuilder ..> WrongTileSyntaxException : throws
}

@enduml
